NIFI-14968 Added support for Bitbucket Data Center (#10322)
Signed-off-by: David Handermann <exceptionfactory@apache.org>